--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,12 @@ line-length = 88
 target-version = ["py37"]
 
 
+[tool.paul-mclendahand]
+github_user = "mozilla-services"
+github_project = "antenna"
+main_branch = "main"
+
+
 [tool.release]
 github_user = "mozilla-services"
 github_project = "antenna"
