--- a/requirements.in
+++ b/requirements.in
@@ -1,8 +1,8 @@
 # Production requirements
 attrs==23.1.0
-boto3==1.26.138
-botocore==1.29.138
-datadog==0.46.0
+boto3==1.28.78
+botocore==1.31.78
+datadog==0.47.0
 dockerflow==2022.8.0
 everett==3.2.0
 falcon==3.1.1
@@ -11,23 +11,24 @@ gevent==23.9.1
 gunicorn==21.2.0
 isodate==0.6.1
 markus==4.2.0
-sentry-sdk==1.29.2
+sentry-sdk==1.34.0
 
 # Development requirements
 bandit==1.7.5
-black==23.3.0
-click==8.1.6
+black==23.10.1
+click==8.1.7
 freezegun==1.2.2
-more-itertools==10.0.0
-pip-tools==7.1.0
-pytest==7.4.0
+more-itertools==10.1.0
+pip-tools==7.3.0
+pytest==7.4.3
 requests==2.31.0
-ruff==0.0.292
+ruff==0.1.3
 Sphinx==7.2.6
 sphinx-rtd-theme==1.3.0
 urlwait==1.0
 werkzeug==3.0.1
 
 # NOTE(willkg): required until we update to python 3.11
-exceptiongroup==1.1.2
+exceptiongroup==1.1.3
 tomli==2.0.1
+typing-extensions==4.8.0
