--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,11 @@ bugzilla_product = "Socorro"
 bugzilla_component = "Infra"
 main_branch = "main"
 tag_name_template = "%Y.%m.%d"
+
+
+[tool.service-status]
+main_branch = "main"
+hosts = [
+    "stage=https://crash-reports.allizom.org",
+    "prod=https://crash-reports.mozilla.com",
+]
